--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
               </div>
         </div>
     </div>
-</div>
+    </div>
    </section>
 
    <section class="3 mt-5">
@@ -207,7 +207,7 @@
         </div>
       </div>
 
-      <div class="col-md-4 h-100">
+      <div class="col-md-4">
         <div class="row">
           <div class="card mb-3 border border-0">
             <div class="row g-0">
@@ -415,6 +415,216 @@
     </div>
 </section>
   
+</section>
+
+
+<section class="5 mt-5">
+  <div class="container">
+    <div class="row">
+    <div class="col-md-8">
+        <div class="row mb-4">
+            <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
+                <div class="carousel-inner">
+                  <div class="carousel-item active" data-bs-interval="2000" style="height: 406px;">
+                    <img src="./_M6R4506.JPG" class="d-block w-100" style="min-height: 60vh; object-fit:cover" alt="...">
+                    <div class="overlay"></div>
+                    <div class="carousel-caption d-none d-md-block">
+                      <h5>First slide label</h5>
+                      <p>Some representative placeholder content for the first slide.</p>
+                    </div>
+                  </div>
+                  <div class="carousel-item" data-bs-interval="2000" style="height: 406px;">
+                    <img src="./_MG_3103.jpg" class="d-block w-100" style="min-height: 60vh; object-fit:cover" alt="...">
+                    <div class="overlay"></div>
+                    <div class="carousel-caption d-none d-md-block">
+                      <h5>Second slide label</h5>
+                      <p>Some representative placeholder content for the second slide.</p>
+                    </div>
+                  </div>
+                  <div class="carousel-item" data-bs-interval="2000" style="height: 406px;">
+                    <img src="./_MG_9726.jpg" class="d-block w-100" style="min-height: 60vh; object-fit:cover" alt="...">
+                    <div class="overlay"></div>
+                    <div class="carousel-caption d-none d-md-block">
+                      <h5>Third slide label</h5>
+                      <p>Some representative placeholder content for the third slide.</p>
+                    </div>
+                  </div>
+                </div>
+
+
+
+                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
+                  <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                  <span class="visually-hidden">Previous</span>
+                </button>
+                <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="next">
+                  <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                  <span class="visually-hidden">Next</span>
+                </button>
+              </div>
+        </div>
+        <div class="row mb-4">
+            <div class="col-md-6">
+                <div class="card mb-3">
+                    <div class="row g-0">
+                      <div class="col-md-5">
+                        <img src="./_MG_3103.jpg" class="img-fluid rounded-start" style="height:100%; object-fit: cover;" alt="...">
+                        <div class="badge position-absolute start-0 top-0 rounded-0 " style="height: auto; width: auto; background:green; font-size: 12px;">
+                          Technology
+                      </div>
+                      </div>
+                      <div class="col-md-7">
+                        <div class="card-body">
+                          <h5 class="card-title">This is a wider card with supporting text below as a natural</h5>
+                          <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+            </div>
+            <div class="col-md-6">
+                <div class="card mb-3">
+                    <div class="row g-0">
+                      <div class="col-md-5">
+                        <img src="./test.jpeg" class="img-fluid rounded-start" style="height:100%; object-fit: cover;" alt="...">
+                        <div class="badge position-absolute start-0 top-0 rounded-0 " style="height: auto; width: auto; background:green; font-size: 12px;">
+                          Technology
+                      </div>
+                      </div>
+                      <div class="col-md-7">
+                        <div class="card-body">
+                          <h5 class="card-title">This is a wider card with supporting text below as a natural</h5>
+                          <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+            </div>
+        </div>
+        <div class="row">
+          <div class="col-md-6">
+              <div class="card mb-3">
+                  <div class="row g-0">
+                    <div class="col-md-5">
+                      <img src="./_MG_3103.jpg" class="img-fluid rounded-start" style="height:100%; object-fit: cover;" alt="...">
+                      <div class="badge position-absolute start-0 top-0 rounded-0 " style="height: auto; width: auto; background:green; font-size: 12px;">
+                          Technology
+                      </div>
+                    </div>
+                    <div class="col-md-7">
+                      <div class="card-body">
+                        <h5 class="card-title">This is a wider card with supporting text below as a natural</h5>
+                        <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+          </div>
+          <div class="col-md-6">
+              <div class="card mb-3">
+                  <div class="row g-0">
+                    <div class="col-md-5">
+                      <img src="./test.jpeg" class="img-fluid rounded-start" style="height:100%; object-fit: cover;" alt="...">
+                      <div class="badge position-absolute start-0 top-0 rounded-0 " style="height: auto; width: auto; background:green; font-size: 12px;">
+                        Technology
+                    </div>
+                    </div>
+                    <div class="col-md-7">
+                      <div class="card-body">
+                        <h5 class="card-title">This is a wider card with supporting text below as a natural</h5>
+                        <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+          </div>
+      </div>
+    </div>
+    <div class="col-md-4">
+      <div class="row">
+        <div class="card mb-3 border border-0">
+          <div class="row g-0">
+            <div class="col-md-4">
+              <img src="./test.jpeg" class="img-fluid rounded-end" style="height:100%; object-fit: cover;" alt="...">
+            </div>
+            <div class="col-md-8">
+              <div class="card-body">
+                <h5 class="card-title">This is a wider card with supporting text below as a natural</h5>
+                <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <div class="row">
+        <div class="card mb-3  border border-0">
+          <div class="row g-0">
+            <div class="col-md-4">
+              <img src="./test.jpeg" class="img-fluid rounded-end" style="height:100%; object-fit: cover;" alt="...">
+            </div>
+            <div class="col-md-8">
+              <div class="card-body">
+                <h5 class="card-title">This is a wider card with supporting text below as a natural</h5>
+                <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <div class="row">
+        <div class="card mb-3 border border-0">
+          <div class="row g-0 ">
+            <div class="col-md-4">
+              <img src="./test.jpeg" class="img-fluid rounded-end" style="height:100%; object-fit: cover;" alt="...">
+            </div>
+            <div class="col-md-8">
+              <div class="card-body">
+                <h5 class="card-title">This is a wider card with supporting text below as a natural</h5>
+                <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <div class="row">
+        <div class="card mb-3 border border-0">
+          <div class="row g-0">
+            <div class="col-md-4">
+              <img src="./test.jpeg" class="img-fluid rounded-end" style="height:100%; object-fit: cover;" alt="...">
+            </div>
+            <div class="col-md-8">
+              <div class="card-body">
+                <h5 class="card-title">This is a wider card with supporting text below as a natural</h5>
+                <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      
+
+      <div class="row">
+        <div class="card mb-3 border border-0">
+          <div class="row g-0">
+            <div class="col-md-4">
+              <img src="./test.jpeg" class="img-fluid rounded-end" style="height:100%; object-fit: cover;" alt="...">
+            </div>
+            <div class="col-md-8">
+              <div class="card-body">
+                <h5 class="card-title">This is a wider card with supporting text below as a natural</h5>
+                <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+
+    </div>
+</div>
+  </div>
 </section>
 
 
