--- a/navbar.html
+++ b/navbar.html
@@ -70,6 +70,7 @@
 
 <body>
 
+    <!-- Galaxy 4K Nav -->
     <nav class="navbar navbar-expand-lg bg-dark">
         <div class="container-fluid mx-5">
             <ul class="navbar-nav">
@@ -111,6 +112,7 @@
             </div>
         </div>
     </nav>
+
 
 
 
