--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
   <title>News Portal</title>
 
   <style>
+    @import url('https://fonts.googleapis.com/css2?family=Khand:wght@300;400;500;600;700&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;1,100;1,200;1,300;1,400;1,500;1,600&display=swap');
     .img badge {
       font-size: 12px;
       width: 10px;
@@ -34,10 +35,100 @@
       top: 0;
       left: 0;
     }
-  </style>
+    body {
+        font-family: poppins;
+    }
+
+    li a {
+        font-family: poppins;
+        color: #ffffff;
+        text-decoration: none;
+    }
+
+    .nav-link,
+    span {
+        color: #ffffff;
+        font-weight: 500;
+        font-size: 16px;
+        text-align: center;
+    }
+
+    i {
+        margin-right: 10px;
+        color: #ffffff;
+    }
+
+    .fa-bars {
+        font-size: 50px;
+    }
+
+    @media (max-width: 768px) {
+        .nav-fill {
+            margin: auto;
+        }
+
+        .btn-nav {
+            flex-direction: row;
+            margin-left: 25% !important;
+        }
+
+        #navbarSupportedContent {
+            padding-bottom: 20px;
+        }
+    }
+</style>
+
+
+
 </head>
 
 <body>
+
+
+<nav class="navbar navbar-expand-lg bg-dark sticky-top">
+    <div class="container-fluid mx-5">
+        <ul class="navbar-nav">
+            <li class="nav-item"><img src="./logo.png" height="70px" width="70px" alt=""></li>
+        </ul>
+
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+            data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
+            aria-label="Toggle navigation" style="outline: 0px;">
+            <i class="fa-solid fa-bars"></i>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav mb-2 mb-lg-0 nav-fill  px-5" style="margin-left:auto; width: 40%;">
+                <li class="nav-item">
+                    <a class="nav-link" aria-current="page" href="#">About</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">Programs</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link">News</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link">CSR</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link">Team</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link">Contact</a>
+                </li>
+            </ul>
+            <ul class="navbar-nav btn-nav" style="margin-left:auto;">
+                <button class="btn-danger btn-sm mx-2" style="border: none; outline:none; border-radius:0px;"><i
+                        class="fa-solid fa-tv"></i><span class="ml-2">Live TV </span></button>
+                <button class="btn-danger btn-sm mx-2" style="border: none; outline:none; border-radius:0px;"><i
+                        class="fa-solid fa-radio"></i><span class="ml-2">Live FM </span></button>
+            </ul>
+        </div>
+    </div>
+</nav>
+
+
+
   <section class="1">
     <div class="container my-5">
       <div class="row row-cols-1 row-cols-md-3 g-4">
