--- a/edge-blog.html
+++ b/edge-blog.html
@@ -20,7 +20,7 @@
             crossorigin="anonymous">
 
 
-        <title>Nav Bar</title>
+        <title>Edge Blog Clone  </title>
         <style>
         @import url('https://fonts.googleapis.com/css2?family=Khand:wght@300;400;500;600;700&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;1,100;1,200;1,300;1,400;1,500;1,600&display=swap');
 
@@ -111,9 +111,9 @@
    h5{
     font-size: 18px;
    }
-  /* 
+  
         @media (max-width: 768px) {
-            .nav-fill {
+            /* .nav-fill {
                 margin: auto;
             }
 
@@ -124,12 +124,15 @@
 
             #navbarSupportedContent {
                 padding-bottom: 20px;
-            }
+            } */
             .side-nav{
     margin-left: initial;
 
    }
-        } */
+   .top-nav{
+    display: none;
+   }
+        }
     </style>
     </head>
 
@@ -165,7 +168,7 @@
         </div>
       </div>
 
-      <nav class="navbar navbar-expand-lg sticky-top" style="border-bottom:1px solid rgba(255,255,255,0.3);">
+      <nav class="navbar navbar-expand-lg sticky-top top-nav" style="border-bottom:1px solid rgba(255,255,255,0.3);">
             <div class="container">
                 <ul class="navbar-nav mb-2 mb-lg-0 nav-fill px-5"
                     style="margin-left:auto; width: 100%;">
